@@ -1,0 +1,13 @@
+<?php
+
+/**
+ * This file stores the path to the ephFrame framework and is loaded from
+ * from different locations as the /app/html/index and /app/console/console.php
+ * files
+ *
+ * @package ephFrame
+ * @author Marcel Eichner // Ephigenia <love@ephigenia.de
+ * @since 2009-09-28
+ */
+
+require dirname(__FILE__).'/../../ephFrame/startup.php';
