@@ -1,0 +1,17 @@
+<?php
+
+/**
+ * Application Helper class
+ * 
+ * This class should be mother class for application helpers that are used
+ * within the application.
+ *
+ * @package app
+ * @subpackage app.lib.helper
+ * @author Marcel Eichner // Ephigenia <love@ephigenia.de>
+ * @since 2009-09-28
+ */
+class AppHelper extends Helper
+{
+	
+} // END AppHelper class
