@@ -6,5 +6,3 @@ framwork.
 
 - Set combine
 - Set merge
-
-- Router, enable routes to redirect to urls
